--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Einstellungen importieren">
 <!ENTITY Ctr_pw_set_syncon	"Zu Sync hinzufügen">
 <!ENTITY Ctr_pw_set_syncoff	"Aus Sync entfernen">
+<!ENTITY Ctr_pw_set_impexp	"'Importieren' und 'Exportieren' schließen Standardeinstellungen aus, die 'about:config &gt;&gt; ...' in ihrer Beschreibung haben!">
 
 <!ENTITY Ctr_special_font	"Hintergrundfarbeinstellungen sind nur für das Standard-Thema vorhanden!">
 <!ENTITY Ctr_special_info	"Einige Optionen haben nur in bestimmten Fällen sichtbare Auswirkungen!">
