--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Εισαγωγή προτιμήσεων">
 <!ENTITY Ctr_pw_set_syncon	"Προσθήκη στο «Sync»">
 <!ENTITY Ctr_pw_set_syncoff	"Απομάκρυνση από το «Sync»">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Οι ρυθμίσεις χρώματος φόντου είναι για το προεπιλεγμένο θέμα μόνο!">
 <!ENTITY Ctr_special_info	"Ορισμένες επιλογές ενδέχεται να μην προσφέρουν ορατές αλλαγές σε όλες τις περιπτώσεις">
