--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Importar preferencias">
 <!ENTITY Ctr_pw_set_syncon	"Añadir a la sincronización">
 <!ENTITY Ctr_pw_set_syncoff	"Eliminar de la sincronización">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"¡Las configuraciones de color de fondo son sólo para el tema decorativo predeterminado!">
 <!ENTITY Ctr_special_info	"¡Algunas opciones podrían no ofrecer cambios visuales en todos los casos!">
