--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Impordi eelistused">
 <!ENTITY Ctr_pw_set_syncon	"Lisa Synci">
 <!ENTITY Ctr_pw_set_syncoff	"Eemalda Syncist">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Taustavärvi sätted on ainult vaikimisi välimuse jaoks!">
 <!ENTITY Ctr_special_info	"Mõned sätted ei pruugi alati nähtavaid muudatusi pakkuda">
