--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"設定をインポート">
 <!ENTITY Ctr_pw_set_syncon	"Syncに追加">
 <!ENTITY Ctr_pw_set_syncoff	"Syncから削除">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"背景色の設定はデフォルトテーマのみに適用されます。">
 <!ENTITY Ctr_special_info	"一部オプションは特定の条件でのみ動作します。">
