--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -414,6 +414,7 @@
 <!ENTITY Ctr_pw_set_import	"Importar as preferências">
 <!ENTITY Ctr_pw_set_syncon	"Adicionar para Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Remover do Sync">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"As configurações da cor do fundo são só para o tema padrão!">
 <!ENTITY Ctr_special_info	"Algumas opções podem oferecer alterações visuais só em certos casos!">
