--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Імпорт налаштувань">
 <!ENTITY Ctr_pw_set_syncon	"Додати до Синхронізації">
 <!ENTITY Ctr_pw_set_syncoff	"Усунути з Синхронізації">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Налаштування кольору тла - тільки для типової теми!">
 <!ENTITY Ctr_special_info	"Деякі параметри не можуть запропонувати візуальні зміни в усіх випадках">
