--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"导入选项设置">
 <!ENTITY Ctr_pw_set_syncon	"添加到同步">
 <!ENTITY Ctr_pw_set_syncoff	"从同步中移除">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"只有默认主题才能设置背景颜色!">
 <!ENTITY Ctr_special_info	"一些选项可能无法在所有情况下提供视觉变化!">
