--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"匯入設定值">
 <!ENTITY Ctr_pw_set_syncon	"新增至 Sync">
 <!ENTITY Ctr_pw_set_syncoff	"從 Sync 移除">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"背景色彩設定僅生效於預設佈景主題!">
 <!ENTITY Ctr_special_info	"部份選項僅在某些情況下提供視覺上的變化!">
