--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -415,6 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Nastajenja importować">
 <!ENTITY Ctr_pw_set_syncon	"K Sync přidać">
 <!ENTITY Ctr_pw_set_syncoff	"Ze Sync wotstronić">
+<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Nastajenja za pozadkowu barbu su jenož za standardnu drastu!">
 <!ENTITY Ctr_special_info	"Někotre nastajenja snano wizuelne změny nic we wšěch padach poskićeja!">
