--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Mezera">
 <!ENTITY Ctr_separator		"Oddělovač">
 <!ENTITY Ctr_navthrobber	"Indikátor činnosti">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"Postranní lišta">
 <!ENTITY Ctr_windowcontrols	"Min/max/zavřít (Fullscreen)">
 <!ENTITY Ctr_rr				"Restartujte &brandShortName;!">
