--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Διάστημα">
 <!ENTITY Ctr_separator		"Διαχωριστικό">
 <!ENTITY Ctr_navthrobber	"Ενδείκτης δραστηριότητας">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Πλευρική στήλη)">
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/Μεγιστοποίηση/Κλείσιμο (Πλήρης οθόνη)">
 <!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
