--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separador">
 <!ENTITY Ctr_navthrobber	"Indicador de actividad">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Barra lateral)">
 <!ENTITY Ctr_windowcontrols	"Min/Max/Cerrar (pantalla completa)">
 <!ENTITY Ctr_rr				"¡Requiere reiniciar!">
