--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Tühimik">
 <!ENTITY Ctr_separator		"Eraldaja">
 <!ENTITY Ctr_navthrobber	"Aktiivsuse näidik">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Külgriba)">
 <!ENTITY Ctr_windowcontrols	"Min/max/sulge (Täisekraan)">
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
