--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"スペース">
 <!ENTITY Ctr_separator		"セパレーター">
 <!ENTITY Ctr_navthrobber	"アクティビティインジケータ">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"サイドバー">
 <!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
