--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Odstęp">
 <!ENTITY Ctr_separator		"Separator">
 <!ENTITY Ctr_navthrobber	"Wskaźnik aktywności">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Pasek boczny)">
 <!ENTITY Ctr_windowcontrols	"Minimalizuj, Maksymalizuj, Zamknij (pełny ekran)">
 <!ENTITY Ctr_rr				"Wymagany restart!">
@@ -415,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Importuj ustawienia">
 <!ENTITY Ctr_pw_set_syncon	"Dodaj do Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Usuń z Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Ustawienia zawierające opis 'about:config &gt;&gt; ...' są domyślnymi ustawieniami przeglądarki i nie zostają wyeksportowane lub zaimportowane!">
 
 <!ENTITY Ctr_special_font	"Ustawienia koloru tła są tylko dla domyślnego motywu!">
 <!ENTITY Ctr_special_info	"Niektóre opcje mogą nie zawsze oferować widoczne zmiany">
