--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Espaço">
 <!ENTITY Ctr_separator		"Separador">
 <!ENTITY Ctr_navthrobber	"Indicador de atividade">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"Barra lateral">
 <!ENTITY Ctr_windowcontrols	"Mínimo/máximo/fechar (tela cheia)">
 <!ENTITY Ctr_rr				"Reinicie o &brandShortName;!">
