--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Prostor">
 <!ENTITY Ctr_separator		"Ločilo">
 <!ENTITY Ctr_navthrobber	"Kazalnik dejavnosti">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(stranska vrstica)">
 <!ENTITY Ctr_windowcontrols	"Skrči/Razpni/Zapri (celozaslonski način)">
 <!ENTITY Ctr_rr				"Zahtevan je ponovni zagon!">
