--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"空白">
 <!ENTITY Ctr_separator		"分隔符">
 <!ENTITY Ctr_navthrobber	"活动指示器">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"侧边栏">
 <!ENTITY Ctr_windowcontrols	"最小化/最大化/关闭 (全屏)">
 <!ENTITY Ctr_rr				"需要重启 &brandShortName;!">
