--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -11,6 +11,7 @@
 <!ENTITY Ctr_space			"Mellemrum">
 <!ENTITY Ctr_separator		"Separator">
 <!ENTITY Ctr_navthrobber	"Aktivitetsindikator">
+<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Sidepanel)">
 <!ENTITY Ctr_windowcontrols	"Minimere/maksimere/luk (fuldskærm)">
 <!ENTITY Ctr_rr				"Genstart kræves!">
