--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Espaço">
 <!ENTITY Ctr_separator		"Separador">
 <!ENTITY Ctr_navthrobber	"Indicador de atividade">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Indicador de modo privativo">
 <!ENTITY Ctr_sidebarbutton	"Barra lateral">
 <!ENTITY Ctr_windowcontrols	"Mínimo/máximo/fechar (tela cheia)">
 <!ENTITY Ctr_rr				"Reinicie o &brandShortName;!">
@@ -149,7 +149,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Direita">
 <!ENTITY Ctr_html5warning	"Aviso de tela cheia HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Aparência de imagem clássica em fundo branco">
-<!ENTITY Ctr_altdlprogbar	"Aparência alternativa da barra de progresso de download">
+<!ENTITY Ctr_altdlprogbar	"Barra de progresso de download: aparência alternativa">
 <!ENTITY Ctr_altalertbox	"'Caixa de alerta': aparência alternativa">
 <!ENTITY Ctr_emptygfavico	"Substituir favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Painel da barra de status móvel">
@@ -382,7 +382,7 @@
 <!ENTITY Ctr_dlanimation	"Usar animação ao 'notificar download'">
 <!ENTITY Ctr_fsanimation	"Animações em tela cheia">
 <!ENTITY Ctr_fsaduration	"Animações em tela cheia para conteúdo HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Barra de busca: animar resultado destacado">
 
 <!ENTITY Ctr_toolsitem		"Item do menu no menu ferramentas">
 <!ENTITY Ctr_appmenuitem	"Item do menu no menu botões do aplicativo">
@@ -404,7 +404,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Ícone de reprodução de áudio">
 <!ENTITY Ctr_e_containertab	"Abas container">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Proteção anti-impressão digital">
 <!ENTITY Ctr_e_oldfontgfx	"Antiga renderização de fonte">
 
 <!ENTITY Ctr_pw_settings	"Configurações">
@@ -415,7 +415,7 @@
 <!ENTITY Ctr_pw_set_import	"Importar as preferências">
 <!ENTITY Ctr_pw_set_syncon	"Adicionar para Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Remover do Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferências contendo uma descrição 'about:config &gt;&gt; ...' são preferências padrão do navegador e não são exportadas ou importadas!">
 
 <!ENTITY Ctr_special_font	"As configurações da cor do fundo são só para o tema padrão!">
 <!ENTITY Ctr_special_info	"Algumas opções podem oferecer alterações visuais só em certos casos!">
