--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"スペース">
 <!ENTITY Ctr_separator		"セパレーター">
 <!ENTITY Ctr_navthrobber	"アクティビティインジケータ">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"プライベートブラウジングアイコン">
 <!ENTITY Ctr_sidebarbutton	"サイドバー">
 <!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"設定をインポート">
 <!ENTITY Ctr_pw_set_syncon	"Syncに追加">
 <!ENTITY Ctr_pw_set_syncoff	"Syncから削除">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"インポートとエキスポートは、'about:config &gt;&gt; ...'の説明を含んだデフォルト値の設定を除きます！">
 
 <!ENTITY Ctr_special_font	"背景色の設定はデフォルトテーマのみに適用されます。">
 <!ENTITY Ctr_special_info	"一部オプションは特定の条件でのみ動作します。">
