--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Интервал">
 <!ENTITY Ctr_separator		"Разделитель">
 <!ENTITY Ctr_navthrobber	"Индикатор активности">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Индикатор приватного режима">
 <!ENTITY Ctr_sidebarbutton	"Боковая панель">
 <!ENTITY Ctr_windowcontrols	"Мин/макс/закрыть (полноэкранный)">
 <!ENTITY Ctr_rr				"Перезапустите &brandShortName;!">
@@ -376,13 +376,13 @@
 <!ENTITY Ctr_addonbarfs		"В полноэкранном режиме">
 
 <!ENTITY Ctr_tabthrobber	"Анимация загрузки">
-<!ENTITY Ctr_bmanimation	"Анимация создания закладок">
+<!ENTITY Ctr_bmanimation	"Анимация добавления закладок">
 <!ENTITY Ctr_pananimation	"Анимация открытия панели">
 <!ENTITY Ctr_tabanimation	"Анимация открытия и закрытия вкладок">
 <!ENTITY Ctr_dlanimation	"Анимация «Загрузка завершена»">
 <!ENTITY Ctr_fsanimation	"Полноэкранная анимация">
 <!ENTITY Ctr_fsaduration	"Полноэкранная анимация для HTML5 контента">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Панель поиска: анимировать подсветку результатов">
 
 <!ENTITY Ctr_toolsitem		"Пункт в меню инструментов">
 <!ENTITY Ctr_appmenuitem	"Пункт в меню кнопки приложения">
@@ -404,7 +404,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Значок воспроизведения аудио на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнер вкладок">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Защита от оставления «цифровых отпечатков пальцев»">
 <!ENTITY Ctr_e_oldfontgfx	"Старый рендеринг шрифтов">
 
 
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Импорт настроек">
 <!ENTITY Ctr_pw_set_syncon	"Добавить в синхронизацию">
 <!ENTITY Ctr_pw_set_syncoff	"Удалить из синхронизации">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Параметры, содержащие описание 'about:config &gt;&gt; …' являются настройками браузера по умолчанию, и они не будут импортированы или экспортированы!">
 
 <!ENTITY Ctr_special_font	"Настройки цвета фона — только для темы по умолчанию!">
 <!ENTITY Ctr_special_info	"Некоторые параметры могут предложить визуальные изменения только в определённых случаях!">
