--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separador">
 <!ENTITY Ctr_navthrobber	"Indicador de actividad">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Indicador de modo privado">
 <!ENTITY Ctr_sidebarbutton	"(Barra lateral)">
 <!ENTITY Ctr_windowcontrols	"Min/Max/Cerrar (pantalla completa)">
 <!ENTITY Ctr_rr				"¡Requiere reiniciar!">
@@ -382,7 +382,7 @@
 <!ENTITY Ctr_dlanimation	"Animación de las notificaciones de descarga">
 <!ENTITY Ctr_fsanimation	"Animación del cambio a pantalla completa">
 <!ENTITY Ctr_fsaduration	"Animación del cambio a pantalla completa para contenidos HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Barra de herramientas de búsqueda: Animar el destacado de resultados">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
@@ -404,7 +404,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Protección contra perfilamento (fingerprinting)">
 <!ENTITY Ctr_e_oldfontgfx	"Renderizado antiguo de fuentes">
 
 
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Importar preferencias">
 <!ENTITY Ctr_pw_set_syncon	"Añadir a la sincronización">
 <!ENTITY Ctr_pw_set_syncoff	"Eliminar de la sincronización">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"¡Las preferencias que llevan una descripción 'about:config &gt;&gt; ...' son predeterminadas del navegador y no se exportan o importan!">
 
 <!ENTITY Ctr_special_font	"¡Las configuraciones de color de fondo son sólo para el tema decorativo predeterminado!">
 <!ENTITY Ctr_special_info	"¡Algunas opciones podrían no ofrecer cambios visuales en todos los casos!">
