--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Odstęp">
 <!ENTITY Ctr_separator		"Separator">
 <!ENTITY Ctr_navthrobber	"Wskaźnik aktywności">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Wskaźnik przeglądania prywatnego">
 <!ENTITY Ctr_sidebarbutton	"(Pasek boczny)">
 <!ENTITY Ctr_windowcontrols	"Minimalizuj, Maksymalizuj, Zamknij (pełny ekran)">
 <!ENTITY Ctr_rr				"Wymagany restart!">
