--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Importovat nastavení">
 <!ENTITY Ctr_pw_set_syncon	"Přidat do Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Odebrat ze Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Nastavení pozadí ovlivní pouze výchozí vzhled!">
 <!ENTITY Ctr_special_info	"Některé volby nemusí vzhled vůbec ovlivnit">
