--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Importér indstillinger">
 <!ENTITY Ctr_pw_set_syncon	"Føj til Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Fjern fra Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Indstillinger til baggrundsfarve gælder kun til standard tema!">
 <!ENTITY Ctr_special_info	"Nogle indstillinger giver måske ikke altid synlige ændringer">
