--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -382,7 +382,7 @@
 <!ENTITY Ctr_dlanimation	"'Download gestartet und beendet'-Animation">
 <!ENTITY Ctr_fsanimation	"'Vollbild-Animationen'">
 <!ENTITY Ctr_fsaduration	"'Vollbild-Animationen' für HTML5-Inhalte">
-<!ENTITY Ctr_findbarhl		"Suchleiste für Seiteninhalte: animierete Suchergebnishervorhebung">
+<!ENTITY Ctr_findbarhl		"Suchleiste für Seiteninhalte: animierte Suchergebnishervorhebung">
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
 <!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der &brandShortName;-Schaltfläche">
