--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Import preferences">
 <!ENTITY Ctr_pw_set_syncon	"Add to Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Remove from Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Background color settings are for default theme only!">
 <!ENTITY Ctr_special_info	"Some options may not always offer visible changes">
