--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Mjezera">
 <!ENTITY Ctr_separator		"Dźělatko">
 <!ENTITY Ctr_navthrobber	"Wozjewjenje aktiwity">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Wozjewjenje priwatneho modusa">
 <!ENTITY Ctr_sidebarbutton	"Bočnica">
 <!ENTITY Ctr_windowcontrols	"Min./maks./začinić (połna wobrazowka)">
 <!ENTITY Ctr_rr				"Startujće &brandShortName; znowa!">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
-<!ENTITY Ctr_ib_graycolor	"Šěra barba za njeznate identitowe strony a strony about:'">
+<!ENTITY Ctr_ib_graycolor	"Šěra barba za njeznate identitowe strony a strony 'about:'">
 <!ENTITY Ctr_verifiedcolors	"Tłóčatkowe barby za přepruwowane websydła, wěste a njewěste zwiski">
 <!ENTITY Ctr_ibinfoico		"'i'-symbol přez globusowy symbol wuměnić">
 <!ENTITY Ctr_ibinfoico2		"'i'-symbol schować (jeli móžno)">
@@ -382,7 +382,7 @@
 <!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje'">
 <!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce">
 <!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wobsah HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Pytanske polo: animěrowane wuzběhnjenje wuslědkow">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Nastroje">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałoženskich tłóčatkow">
@@ -404,7 +404,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Škit před digitalnymi porstowymi wotćišćemi">
 <!ENTITY Ctr_e_oldfontgfx	"Rysowanje starych pismow">
 
 
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Nastajenja importować">
 <!ENTITY Ctr_pw_set_syncon	"K Sync přidać">
 <!ENTITY Ctr_pw_set_syncoff	"Ze Sync wotstronić">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Nastajenja, kotrež wopisanje 'about:config &gt;&gt; ...' wobsahuja, su standardne nastajenja wobhladowaka a njedadźa so eksportować abo importować!">
 
 <!ENTITY Ctr_special_font	"Nastajenja za pozadkowu barbu su jenož za standardnu drastu!">
 <!ENTITY Ctr_special_info	"Někotre nastajenja snano wizuelne změny nic we wšěch padach poskićeja!">
