--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Importa preferenze">
 <!ENTITY Ctr_pw_set_syncon	"Aggiungi a Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Rimuovi da Sync">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"La modifica del colore di sfondo si applica solo utilizzando il tema predefinito!">
 <!ENTITY Ctr_special_info	"Alcune opzioni si applicano solo in casi particolari">
