--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -416,7 +416,7 @@
 <!ENTITY Ctr_pw_set_import	"Uvozi nastavitve">
 <!ENTITY Ctr_pw_set_syncon	"Dodaj v Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Odstrani iz Synca">
-<!ENTITY Ctr_pw_set_impexp	"Prefereces containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
 
 <!ENTITY Ctr_special_font	"Nastavitve barve ozadja so samo za privzeto temo!">
 <!ENTITY Ctr_special_info	"Nekatere možnosti v vseh primerih morda ne bodo povzročile vidnih sprememb">
