--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Κινησιομοίωση ανοίγματος μενού πίνακα">
 <!ENTITY Ctr_tabanimation	"Κινησιομοίωση κλεισίματος/ανοίγματος καρτέλας">
 <!ENTITY Ctr_dlanimation	"Κινησιομοίωση ειδοποίησης λήψης">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Κινησιομοίωση πλήρους οθόνης">
 <!ENTITY Ctr_fsaduration	"Κινησιομοίωση πλήρους οθόνης για περιεχόμενο HTML5">
 <!ENTITY Ctr_findbarhl		"Γραμμή εύρεσης: κινησιομοίωση επισήμανσης αποτελεσμάτων">
