--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animación de la apertura de menús de panel">
 <!ENTITY Ctr_tabanimation	"Animación de la apertura/cierre de pestañas">
 <!ENTITY Ctr_dlanimation	"Animación de las notificaciones de descarga">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Animación del cambio a pantalla completa">
 <!ENTITY Ctr_fsaduration	"Animación del cambio a pantalla completa para contenidos HTML5">
 <!ENTITY Ctr_findbarhl		"Barra de herramientas de búsqueda: Animar el destacado de resultados">
