--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Paneeli avamise animatsioon">
 <!ENTITY Ctr_tabanimation	"Kaardi sulgemise/avamise animatsioon">
 <!ENTITY Ctr_dlanimation	"'Allalaadimise teavituse' animatsioon">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Täisekraani animatsioonid">
 <!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis">
 <!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
