--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation d'ouverture et de fermeture des onglets">
 <!ENTITY Ctr_dlanimation	"Animation du bouton « Téléchargement » lorsqu'un téléchargement s'achève">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Animations de transition vers/depuis le mode plein écran">
 <!ENTITY Ctr_fsaduration	"Animations de transition vers/depuis le mode plein écran pour le contenu HTML5">
 <!ENTITY Ctr_findbarhl		"Barre de recherche : animer le surlignage des résultats">
