--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Icona animata all’apertura di un pannello">
 <!ENTITY Ctr_tabanimation	"Icona animata all’apertura o alla chiusura di una scheda">
 <!ENTITY Ctr_dlanimation	"Icona animata di avviso download">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Icona animata all’attivazione della modalità 'A tutto schermo'">
 <!ENTITY Ctr_fsaduration	"Icona animata per la modalità 'A tutto schermo' degli elementi HTML5">
 <!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
