--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
 <!ENTITY Ctr_tabanimation	"Animacja otwierania i zamykania karty">
 <!ENTITY Ctr_dlanimation	"Animacja 'powiadomienia pobierania'">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Animacje pełnoekranowe">
 <!ENTITY Ctr_fsaduration	"Animacje pełnoekranowe treści HTML5">
 <!ENTITY Ctr_findbarhl		"Pasek wyszukiwania: animuj podświetlanie wyników">
