--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Usar animação ao abrir o painel">
 <!ENTITY Ctr_tabanimation	"Usar animação ao fechar/abrir a aba">
 <!ENTITY Ctr_dlanimation	"Usar animação ao 'notificar download'">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Animações em tela cheia">
 <!ENTITY Ctr_fsaduration	"Animações em tela cheia para conteúdo HTML5">
 <!ENTITY Ctr_findbarhl		"Barra de busca: animar resultado destacado">
