--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animacija odpiranja podokna">
 <!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov">
 <!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih'">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Celozaslonske animacije">
 <!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5">
 <!ENTITY Ctr_findbarhl		"Iskalna vrstica: animiraj poudaranje rezultatov">
