--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Анімація відкривання панелі">
 <!ENTITY Ctr_tabanimation	"Анімація відкривання/закривання вкладок">
 <!ENTITY Ctr_dlanimation	"Анімація «Повідомлення завантаження»">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Повноекранні анімації">
 <!ENTITY Ctr_fsaduration	"Повноекранні анімації для HTML5 вмісту">
 <!ENTITY Ctr_findbarhl		"Панель пошуку: анімувати виділення результатів">
