--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画">
 <!ENTITY Ctr_dlanimation	"“下载提醒”动画">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"全屏动画">
 <!ENTITY Ctr_fsaduration	"HTML5 内容使用全屏动画">
 <!ENTITY Ctr_findbarhl		"搜索栏: 搜索结果高亮动画">
