--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
 <!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu">
 <!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování'">
+<!ENTITY Ctr_uianimation	"General ui animations">
 <!ENTITY Ctr_fsanimation	"Animace ve fullscreenu">
 <!ENTITY Ctr_fsaduration	"Animace ve fullscreenu pro obsah HTML5">
 <!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
