--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -35,7 +35,7 @@
 
 <!ENTITY Ctr_tnot			"(karty nie na górze)">
 
-<!ENTITY Ctr_tabcolors_t	"Kolory karty i tekstu">
+<!ENTITY Ctr_tabcolors_t	"Kolor i wygląd tekstu">
 
 <!ENTITY Ctr_tabs			"Karty">
 <!ENTITY Ctr_tabs0			"Domyślne programu &brandShortName; (karty zaokrąglone)">
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
 <!ENTITY Ctr_tabanimation	"Animacja otwierania i zamykania karty">
 <!ENTITY Ctr_dlanimation	"Animacja 'powiadomienia pobierania'">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Animacje głównego interfejsu użytkownika">
 <!ENTITY Ctr_fsanimation	"Animacje pełnoekranowe">
 <!ENTITY Ctr_fsaduration	"Animacje pełnoekranowe treści HTML5">
 <!ENTITY Ctr_findbarhl		"Pasek wyszukiwania: animuj podświetlanie wyników">
