--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Prostor">
 <!ENTITY Ctr_separator		"Ločilo">
 <!ENTITY Ctr_navthrobber	"Kazalnik dejavnosti">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Kazalnik zasebnega načina">
 <!ENTITY Ctr_sidebarbutton	"(stranska vrstica)">
 <!ENTITY Ctr_windowcontrols	"Skrči/Razpni/Zapri (celozaslonski način)">
 <!ENTITY Ctr_rr				"Zahtevan je ponovni zagon!">
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animacija odpiranja podokna">
 <!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov">
 <!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih'">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Splošne animacije up. vmesnika">
 <!ENTITY Ctr_fsanimation	"Celozaslonske animacije">
 <!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5">
 <!ENTITY Ctr_findbarhl		"Iskalna vrstica: animiraj poudaranje rezultatov">
@@ -417,7 +417,7 @@
 <!ENTITY Ctr_pw_set_import	"Uvozi nastavitve">
 <!ENTITY Ctr_pw_set_syncon	"Dodaj v Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Odstrani iz Synca">
-<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Nastavitve, ki vsebujejo opis 'about:config &gt;&gt; …', so brskalnikove privzete in jih ni mogoče izvoziti ali uvoziti!">
 
 <!ENTITY Ctr_special_font	"Nastavitve barve ozadja so samo za privzeto temo!">
 <!ENTITY Ctr_special_info	"Nekatere možnosti v vseh primerih morda ne bodo povzročile vidnih sprememb">
