--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -11,7 +11,7 @@
 <!ENTITY Ctr_space			"Tühimik">
 <!ENTITY Ctr_separator		"Eraldaja">
 <!ENTITY Ctr_navthrobber	"Aktiivsuse näidik">
-<!ENTITY Ctr_maskindicator	"Private Mode Indicator">
+<!ENTITY Ctr_maskindicator	"Privaatse režiimi näidik">
 <!ENTITY Ctr_sidebarbutton	"(Külgriba)">
 <!ENTITY Ctr_windowcontrols	"Min/max/sulge (Täisekraan)">
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
@@ -35,7 +35,7 @@
 
 <!ENTITY Ctr_tnot			"(kaardid pole kõige peal)">
 
-<!ENTITY Ctr_tabcolors_t	"Kaartide värvid &amp; tekst">
+<!ENTITY Ctr_tabcolors_t	"Värv &amp; teksti välimus">
 
 <!ENTITY Ctr_tabs			"Kaardid">
 <!ENTITY Ctr_tabs0			"&brandShortName;i vaikimisi säte (ümarad kaardid)">
@@ -99,7 +99,7 @@
 <!ENTITY Ctr_paneluibtweak	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust...">
 <!ENTITY Ctr_paneluibtweak2	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust (ainult ikoon)...">
 <!ENTITY Ctr_paneluibtweak3	"...kui see asub kaartide ribal">
-<!ENTITY Ctr_appbuttonc		"Nupu värv">
+<!ENTITY Ctr_appbuttonc		"Värv">
 <!ENTITY Ctr_appbuttonc_o	"Oranž (vaikimisi)">
 <!ENTITY Ctr_appbuttonc_a	"Sinine (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Must (Nightly)">
@@ -149,7 +149,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Paremal">
 <!ENTITY Ctr_html5warning	"HTML5 täisekraani hoiatus">
 <!ENTITY Ctr_oldtoplevimg	"Klassikaline pildi välimus valgel taustal">
-<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
+<!ENTITY Ctr_altdlprogbar	"Allalaadimise edenemise riba: alternatiivne välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
 <!ENTITY Ctr_emptygfavico	"Asenda üldine lehe ikoon">
 <!ENTITY Ctr_mstatusbar		"Liigutatav olekupaneel">
@@ -185,14 +185,14 @@
 <!ENTITY Ctr_nosnippets		"Avaleht (about:home): peida katked">
 <!ENTITY Ctr_search_ui		"Otsing">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Ei ühildu teiste otsingulisadega!">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
 <!ENTITY Ctr_ctrosearchdel	"viivitusega">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit1	"Otsingumootor">
+<!ENTITY Ctr_osearch_meoit2	"Otsingu luup">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
 <!ENTITY Ctr_osearch_cwidth	"Otsingu hüpikute kohandatud laius">
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
@@ -218,7 +218,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
 <!ENTITY Ctr_bmbviewbmsb	"Menüühüpik: näita kirjet 'Kuva järjehoidjate külgriba'">
 <!ENTITY Ctr_bmbviewbmtb	"Menüühüpik: näita kirjet 'Kuva järjehoidjariba'">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
+<!ENTITY Ctr_bmbutnotb		"Menüühüpik: peida menüü 'Järjehoidjariba'">
 <!ENTITY Ctr_bmbnounsort	"Menüühüpik: peida kirje 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbutclpopup	"Menüühüpik: näita ainult 'Lisa see leht järjehoidjatesse' ja järjehoidjaid">
 <!ENTITY Ctr_bmbutnotext	"Peida järjehoidjaribal sildid">
@@ -380,10 +380,10 @@
 <!ENTITY Ctr_pananimation	"Paneeli avamise animatsioon">
 <!ENTITY Ctr_tabanimation	"Kaardi sulgemise/avamise animatsioon">
 <!ENTITY Ctr_dlanimation	"'Allalaadimise teavituse' animatsioon">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Üldised kasutajaliidese animatsioonid">
 <!ENTITY Ctr_fsanimation	"Täisekraani animatsioonid">
 <!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Leidmisriba: animeeri tulemuste esiletõstmist">
 
 <!ENTITY Ctr_toolsitem		"Menüükirje tööriistade menüüs">
 <!ENTITY Ctr_appmenuitem	"Menüükirje &brandShortName;i nupu menüüs">
@@ -405,8 +405,8 @@
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_e_containertab	"Konteinerkaardid">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_resfprinting "Jälitamisvastane kaitse (Anti fingerprinting protection)">
+<!ENTITY Ctr_e_oldfontgfx	"Vana kirjaviimistlus">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
@@ -417,7 +417,7 @@
 <!ENTITY Ctr_pw_set_import	"Impordi eelistused">
 <!ENTITY Ctr_pw_set_syncon	"Lisa Synci">
 <!ENTITY Ctr_pw_set_syncoff	"Eemalda Syncist">
-<!ENTITY Ctr_pw_set_impexp	"Preferences containing a 'about:config &gt;&gt; ...' description are default browser preferences and do not get exported or imported!">
+<!ENTITY Ctr_pw_set_impexp	"Eelistused, mille kirjeldus sisaldab teksti 'about:config &gt;&gt; ...', on brauseri vaikimisi eelistused ja neid ei ekspordita ega impordita!">
 
 <!ENTITY Ctr_special_font	"Taustavärvi sätted on ainult vaikimisi välimuse jaoks!">
 <!ENTITY Ctr_special_info	"Mõned sätted ei pruugi alati nähtavaid muudatusi pakkuda">
