--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animación de la apertura de menús de panel">
 <!ENTITY Ctr_tabanimation	"Animación de la apertura/cierre de pestañas">
 <!ENTITY Ctr_dlanimation	"Animación de las notificaciones de descarga">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Animaciones de la interfaz general de usuario">
 <!ENTITY Ctr_fsanimation	"Animación del cambio a pantalla completa">
 <!ENTITY Ctr_fsaduration	"Animación del cambio a pantalla completa para contenidos HTML5">
 <!ENTITY Ctr_findbarhl		"Barra de herramientas de búsqueda: Animar el destacado de resultados">
@@ -405,7 +405,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Protección contra perfilamento (fingerprinting)">
+<!ENTITY Ctr_e_resfprinting "Protección contra perfilamiento (fingerprinting)">
 <!ENTITY Ctr_e_oldfontgfx	"Renderizado antiguo de fuentes">
 
 
