--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -76,8 +76,8 @@
 <!ENTITY Ctr_closetab_0		"Tabblad sluiten">
 <!ENTITY Ctr_closetab_1		"Alleen op actief tabblad">
 <!ENTITY Ctr_closetab_2		"Nergens">
-<!ENTITY Ctr_closetab_3		"Op einde van tabbladwerkbalken">
-<!ENTITY Ctr_closetab_4		"Op begin van tabbladwerkbalken">
+<!ENTITY Ctr_closetab_3		"Op einde van tabbladenwerkbalken">
+<!ENTITY Ctr_closetab_4		"Op begin van tabbladenwerkbalken">
 <!ENTITY Ctr_closetab_5		"Op alle tabbladen (geforceerd)">
 <!ENTITY Ctr_closetab_hfot	"Verbergen voor één zichtbaar tabblad">
 <!ENTITY Ctr_closei_def		"Standaardpictogrammen">
