--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_windowcontrols	"Réduire/Restaurer/Fermer (plein écran)">
 <!ENTITY Ctr_rr				"Redémarrage nécessaire !">
 <!ENTITY Ctr_window			"fenêtre">
-<!ENTITY Ctr_centered		"Centrée">
+<!ENTITY Ctr_centered		"Au centre">
 <!ENTITY Ctr_page			"Page">
 <!ENTITY Ctr_position		"Position :">
 <!ENTITY Ctr_appearance		"Apparence :">
@@ -35,7 +35,7 @@
 
 <!ENTITY Ctr_tnot			"(onglets pas au-dessus)">
 
-<!ENTITY Ctr_tabcolors_t	"Couleurs des onglets">
+<!ENTITY Ctr_tabcolors_t	"Couleurs &amp; apparence du texte">
 
 <!ENTITY Ctr_tabs			"Onglets">
 <!ENTITY Ctr_tabs0			"Réglage par défaut de &brandShortName; (onglets arrondis)">
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation d'ouverture et de fermeture des onglets">
 <!ENTITY Ctr_dlanimation	"Animation du bouton « Téléchargement » lorsqu'un téléchargement s'achève">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Animations générales de l'interface">
 <!ENTITY Ctr_fsanimation	"Animations de transition vers/depuis le mode plein écran">
 <!ENTITY Ctr_fsaduration	"Animations de transition vers/depuis le mode plein écran pour le contenu HTML5">
 <!ENTITY Ctr_findbarhl		"Barre de recherche : animer le surlignage des résultats">
@@ -403,7 +403,7 @@
 <!ENTITY Ctr_e_geolocation	"Géolocalisation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio">
-<!ENTITY Ctr_e_containertab	"Onglets conteneurs">
+<!ENTITY Ctr_e_containertab	"Onglets contextuels">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 <!ENTITY Ctr_e_resfprinting "Protection contre la prise d'empreintes digitales du navigateur">
 <!ENTITY Ctr_e_oldfontgfx	"Ancien rendu des polices">
@@ -417,7 +417,7 @@
 <!ENTITY Ctr_pw_set_import	"Importer des paramètres">
 <!ENTITY Ctr_pw_set_syncon	"Ajouter à Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Retirer de Sync">
-<!ENTITY Ctr_pw_set_impexp	"Les paramètres contenant une description avec « about:config &gt;&gt; » proviennent du navigateur et ne seront donc ni exportés ni importés !">
+<!ENTITY Ctr_pw_set_impexp	"Les paramètres contenant une description avec « about:config » proviennent du navigateur et ne sont donc ni exportés ni importés !">
 
 <!ENTITY Ctr_special_font	"La personnalisation de la couleur d'arrière-plan est réservée au thème par défaut !">
 <!ENTITY Ctr_special_info	"Certaines options peuvent ne pas toujours offrir de changements visibles.">
