--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -348,7 +348,7 @@
 <!ENTITY Ctr_altmenubarpos2	"Unter der &brandShortName;-Titelleiste">
 <!ENTITY Ctr_menubarnofog	"Hintergrundfarbe/-nebel entfernen (Windows Aero Glass / Windows 8)">
 
-<!ENTITY Ctr_aerocolors		"Blaue 'Aero'-Farben für Leisten (und Tabs)">
+<!ENTITY Ctr_aerocolors		"Blaue 'Aero'-Farben">
 <!ENTITY Ctr_aerocolorsg	"Grau-blaue 'Aero'-Farben">
 <!ENTITY Ctr_transpttbw10	"Titel-/Menü-/Tableiste: Hintergrundfarbe entfernen">
 <!ENTITY Ctr_transpttbew10	"Weitere Anpassungen für einige 'Betriebssystem'-Themes">
